# projection_gpu

./: projection_cpu.cc
30Jul25/Projection_GPU_YDF/: .bazelrc  WORKSPACE  random_data.csv
30Jul25/Projection_GPU_YDF/main/: BUILD  main.cc  projection.h  projection_cpu.cc  projection_gpu.cu
Projection_GPU/main/: BUILD  main.cc  projection_gpu.cu  projection_gpu.h
Projection_GPU_YDF/: WORKSPACE
Projection_GPU_YDF/main/: BUILD  projection_gpu.cu
backup/: MODULE.bazel
backup/main/: BUILD  main.cc  poc-gpu.cu  yval_mod.h
gpu_examples/: MODULE.bazel
gpu_examples/main/: BUILD
poc-cpu/main/: BUILD  poc-cpu.cc
poc-gpu-update/main/: BUILD
poc-gpu-updated/: MODULE.bazel
poc-gpu-updated/main/: main.cc  poc-gpu.cu
poc-gpu/main/: main.cc  poc-gpu.cu  yval_mod.h
poc-gpu1/bazel-poc-gpu/main/: BUILD
poc-gpu1/main/: BUILD  main.cc  poc-gpu.cu
